# AtomizeR

./: .gitignore  Cargo.toml  README.md  entries.json  feed.xml  input.json
.github/workflows/: build.yml
src/: main.rs
src/cli/: cli.rs
src/logic/: main_flow.rs  templating.rs
src/logic/converter/: json_input_to_json_entries.rs  json_to_atom.rs
src/model/atom/: atom_entry.rs  atom_feed.rs
src/model/base/: entry.rs  feed.rs
src/model/json/: json_entries.rs  json_entry.rs  json_feed.rs  json_input.rs
src/utils/: atom_writer.rs  json_reader.rs  json_writer.rs  tests.rs
tests/res/: invalid_json.json  stinky_data_test.json  test.json
